--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Keegan Burkett <keegan.2.burkett@gmail.com>",
   "dependencies": {
     "gatsby": "^2.30.1",
+    "gatsby-cli": "^3.4.1",
     "gatsby-image": "^2.4.16",
     "gatsby-plugin-google-analytics": "^2.3.13",
     "gatsby-plugin-mailchimp": "^5.2.2",
